# Stability-Toys

./: .coverage  .dockerignore  .gitignore  CONTROLNET.md  Dockerfile  Dockerfile.CUDA  Dockerfile.RKNN  Dockerfile.live-test  Dockerfile.quick  Dockerfile.test  FP_AGENTS.md  Makefile  Makefile.test  README.md  custom_detector_example.py  dev.sh  docker-compose.dev.yml  docker-compose.live-test.yml  docker-compose.test.yml  docker-compose.yml  docker-cuda.yml  docker-redis.yml  docker-rknn.yml  env.cuda  env.dev  env.docker  env.lcm  env.live-test  env.prod  env.rknn  example_detect.sh  generate-env-lsp.sh  lcm_sr_server.py  localbuild.arm64  localbuild.x86_64  model_detector.py  project-forward-notes.md  pyproject.toml  pyrightconfig.json  pytest.ini  (+13 more)
.waveplan/: .wp-shell.zsh
backends/: README.md  base.py  chat_client.py  controlnet_cache.py  cuda_worker.py  family_profiles.py  latents.py  model_registry.py  model_resolution.py  platform_registry.py  profiles.py  rknn_runtime.py  rknn_worker.py  rknnlcm.py  scheduler_registry.py  styles.py  utils.py  worker_factory.py  worker_pool.py
conf/: controlnets.yaml  keymap.yml  modes-test.yml  modes.yaml.example  modes.yml
docs/: ANALYSIS.md  ASYNC_EVENTS.md  COMFYUI_MODEL_LAYOUT.md  CONTROLNET_MLX_CONVERSION.md  CONTROLNET_RKNN_CONVERSION.md  CUDA_SUPERRES.md  CUDA_VERIFICATION.md  DEPENDENCY_ANALYSIS_phase1_fixes.md  DYNAMIC_MODEL_LOADING.md  GPU_MEMORY_MANAGEMENT.md  MODEL_DETECTION.md  MODEL_DETECTOR_EXTENSIBLE.md  PLAN_generation_controls_negative_scheduler_sampler.md  PLAN_gpu_memory_phase1_fixes.md  PLAN_language_server_mcp.md  PLAN_sdxl_fp8_capability_loader.md  PRIVILEGED_MODE.md  PROMPT_CONDITIONING.md  QRANDOM.md  REVIEW_gpu_memory_phase1.md  SDXL_INTEGRATION_EXAMPLE.md  SDXL_WORKER.md  TESTING_IN_DOCKER.md  (+4 more)
scripts/: USAGE.md  canny_map.py  cn_metadata.py  ctlnet-track2-smoke.sh  depth_map.py  enigma-dev-verify.sh  enigma-worktree.sh  hunyuan_cn_probe.py  local-host.sh  notes_watch.py  pose_map.py  prune-unused-deps.py  pyproject.toml  remote-worktree.sh  resize-for-model.sh  st-dtype-live-verify.sh  st-resize-for-model  test-resize-for-model.sh  waveplan
(+561 files in other folders)
